Ta-480 Adding Accessibility tests for FPL (#2259)
* added accessibility tests

* adding little by little accessibility tests

* adding little by little accessibility tests

* adding little by little accessibility tests

* adding little by little accessibility tests

* adding little by little accessibility tests

* adding little by little accessibility tests

* adding little by little accessibility tests

* adding little by little accessibility tests

* adding little by little accessibility tests

* adding little by little accessibility tests

* adding little by little accessibility tests

* adding little by little accessibility tests

* adding little by little accessibility tests

* adding little by little accessibility tests

* adding remaining tests

* adding remaining tests

* adding remaining tests

* adding remaining tests

* added accessibility tests

* adding little by little accessibility tests

* adding little by little accessibility tests

* adding little by little accessibility tests

* adding little by little accessibility tests

* adding little by little accessibility tests

* adding little by little accessibility tests

* adding little by little accessibility tests

* adding little by little accessibility tests

* adding little by little accessibility tests

* adding little by little accessibility tests

* adding little by little accessibility tests

* adding little by little accessibility tests

* adding little by little accessibility tests

* adding little by little accessibility tests

* adding remaining tests

* adding remaining tests

* adding remaining tests

* adding remaining tests

* adding remaining tests

* adding remaining tests

* adding remaining tests

* removed last added tests

* adding 5 tests and commenting 2

* adding all commented tests

* trying to run on nightly

* adding all files for accessibility

* adding accessibility to functional ca

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "mochawesome": "^6.2.2",
     "node-fetch": "^2.6.1",
     "puppeteer": "7.1.0",
-    "moment": "2.29.1"
+    "moment": "2.29.1",
+    "html_codesniffer": "^2.5.1"
   },
   "scripts": {
     "lint": "eslint e2e",
