--- a/package.json
+++ b/package.json
@@ -9,15 +9,16 @@
     "eslint": "7.20.0",
     "eslint-plugin-codeceptjs": "^1.3.0",
     "glob": "^7.1.6",
+    "html_codesniffer": "^2.5.1",
     "husky": "^4.3.8",
     "lodash": "^4.17.21",
     "mocha-junit-reporter": "^2.0.0",
     "mocha-multi": "^1.1.3",
     "mochawesome": "^6.2.2",
+    "moment": "2.29.1",
     "node-fetch": "^2.6.1",
     "puppeteer": "7.1.0",
-    "moment": "2.29.1",
-    "html_codesniffer": "^2.5.1"
+    "webdriverio": "^6.12.1"
   },
   "scripts": {
     "lint": "eslint e2e",
