--- a/build.gradle
+++ b/build.gradle
@@ -27,3 +27,13 @@ dependencyCheck {
   analyzedTypes = ['jar']
   scanConfigurations = ['runtimeClasspath']
 }
+
+task crossbrowser(description: 'Runs crossbrowser tests.') {
+  dependsOn(inStrictOrder(awaitApplicationReadiness, installDependencies, checkDependenciesIntegrity, lintUserInterfaceTests, runCrossBrowserTests))
+}
+task runCrossBrowserTests(type: Exec, description: 'Runs ExpertUI cross brower tests.') {
+  onlyIf {
+    return System.env.SKIP_BROWSER_TESTS == null || System.env.SKIP_BROWSER_TESTS == 'false'
+  }
+  commandLine '/usr/bin/yarn', '--silent', 'test:crossbrowser'
+}
