--- a/service/build.gradle
+++ b/service/build.gradle
@@ -120,6 +120,17 @@ task functional(description: 'Runs the functional tests.') {
   dependsOn(inStrictOrder(installDependencies, checkDependenciesIntegrity, lintUserInterfaceTests, runApiTests, runBrowserTests))
 }
 
+task crossbrowser(description: 'Runs crossbrowser tests.') {
+  dependsOn(inStrictOrder(awaitApplicationReadiness, installDependencies, checkDependenciesIntegrity, lintUserInterfaceTests, runCrossBrowserTests))
+}
+
+task runCrossBrowserTests(type: Exec, description: 'Runs ExpertUI cross brower tests.') {
+  onlyIf {
+    return System.env.SKIP_BROWSER_TESTS == null || System.env.SKIP_BROWSER_TESTS == 'false'
+  }
+  commandLine '/usr/bin/yarn', '--silent', 'test:crossbrowser'
+}
+
 checkstyle {
   maxWarnings = 0
   toolVersion = "8.25"
