--- a/service/build.gradle
+++ b/service/build.gradle
@@ -347,6 +347,7 @@ dependencies {
     contractTestImplementation group: 'org.springframework.cloud', name: 'spring-cloud-netflix-ribbon', version: '2.2.7.RELEASE'
     contractTestImplementation group: 'com.netflix.ribbon', name: 'ribbon-core', version: '2.7.18'
     contractTestCompile group: 'uk.gov.hmcts.reform', name: 'core-case-data-store-client', version: '4.7.6'
+    contractTestImplementation group: 'com.google.guava', name: 'guava', version: '30.1-jre'
 
 }
 
