--- a/ccd-definition/ComplexTypes/CareSupervision/2_OtherApplicationsBundle.json
+++ b/ccd-definition/ComplexTypes/CareSupervision/2_OtherApplicationsBundle.json
@@ -19,6 +19,15 @@
   {
     "LiveFrom": "01/01/2017",
     "ID": "OtherApplicationsBundle",
+    "ListElementCode": "parentalResponsibilityType",
+    "FieldType": "FixedRadioList",
+    "ElementLabel": "Parental responsibility type",
+    "FieldTypeParameter": "ParentalResponsibilityType",
+    "SecurityClassification": "Public"
+  },
+  {
+    "LiveFrom": "01/01/2017",
+    "ID": "OtherApplicationsBundle",
     "ListElementCode": "uploadedDateTime",
     "FieldType": "Text",
     "ElementLabel": "Date and time of upload",
