--- a/ccd-definition/CaseEventToFields/CareSupervision/uploadAdditionalApplications-nonprod.json
+++ b/ccd-definition/CaseEventToFields/CareSupervision/uploadAdditionalApplications-nonprod.json
@@ -47,7 +47,8 @@
     "PageID": 2,
     "PageDisplayOrder": 2,
     "PageColumnNumber": 1,
-    "ShowSummaryChangeOption": "Y"
+    "ShowSummaryChangeOption": "Y",
+    "PageShowCondition": "additionalApplicationType=\"*\""
   },
   {
     "LiveFrom": "01/01/2017",
