Fix Secure Accommodation and Parental responsibility orders fields and fix sonarcloud issues

--- a/ccd-definition/ComplexTypes/CareSupervision/2_OtherApplicationsBundle.json
+++ b/ccd-definition/ComplexTypes/CareSupervision/2_OtherApplicationsBundle.json
@@ -23,7 +23,7 @@
     "ID": "OtherApplicationsBundle",
     "ListElementCode": "parentalResponsibilityType",
     "FieldType": "FixedRadioList",
-    "ElementLabel": "Parental responsibility type",
+    "ElementLabel": "Who's seeking parental responsibility?",
     "FieldTypeParameter": "ParentalResponsibilityType",
     "SecurityClassification": "Public",
     "Searchable": "N"
