--- a/ccd-definition/CaseEventToFields/CareSupervision/uploadAdditionalApplications-nonprod.json
+++ b/ccd-definition/CaseEventToFields/CareSupervision/uploadAdditionalApplications-nonprod.json
@@ -28,7 +28,7 @@
     "LiveFrom": "01/01/2017",
     "CaseTypeID": "CARE_SUPERVISION_EPO",
     "CaseEventID": "uploadAdditionalApplications",
-    "CaseFieldID": "c2ApplicationType",
+    "CaseFieldID": "c2Type",
     "PageFieldDisplayOrder": 3,
     "DisplayContext": "MANDATORY",
     "PageID": 1,
@@ -61,7 +61,7 @@
     "PageDisplayOrder": 3,
     "PageColumnNumber": 1,
     "ShowSummaryChangeOption": "Y",
-    "FieldShowCondition": "c2ApplicationType=\"DO_NOT_SHOW\"",
+    "FieldShowCondition": "c2Type=\"DO_NOT_SHOW\"",
     "CallBackURLMidEvent": "${CCD_DEF_CASE_SERVICE_BASE_URL}/callback/upload-additional-applications/validate/mid-event"
   },
   {
