remove pba fields from case data and remove feature toggle for upload additional applications event

--- a/ccd-definition/ComplexTypes/CareSupervision/2_OtherApplicationsBundle.json
+++ b/ccd-definition/ComplexTypes/CareSupervision/2_OtherApplicationsBundle.json
@@ -60,7 +60,7 @@
     "LiveFrom": "01/01/2017",
     "ID": "OtherApplicationsBundle",
     "ListElementCode": "supportingEvidenceBundle",
-    "ElementLabel": "Supporting Documents",
+    "ElementLabel": "Supporting documents",
     "FieldType": "Collection",
     "FieldTypeParameter": "SupportingEvidenceBundle",
     "SecurityClassification": "Public",
