--- a/ccd-definition/ComplexTypes/CareSupervision/2_OtherApplicationsBundle.json
+++ b/ccd-definition/ComplexTypes/CareSupervision/2_OtherApplicationsBundle.json
@@ -65,5 +65,25 @@
     "FieldTypeParameter": "SupportingEvidenceBundle",
     "SecurityClassification": "Public",
     "Searchable": "N"
+  },
+  {
+    "LiveFrom": "01/01/2017",
+    "ID": "OtherApplicationsBundle",
+    "ListElementCode": "supportingEvidenceLA",
+    "ElementLabel": "Supporting documents",
+    "FieldType": "Collection",
+    "FieldTypeParameter": "SupportingEvidenceBundle",
+    "SecurityClassification": "Public",
+    "Searchable": "N"
+  },
+  {
+    "LiveFrom": "01/01/2017",
+    "ID": "OtherApplicationsBundle",
+    "ListElementCode": "supportingEvidenceNC",
+    "ElementLabel": "Supporting documents",
+    "FieldType": "Collection",
+    "FieldTypeParameter": "SupportingEvidenceBundle",
+    "SecurityClassification": "Public",
+    "Searchable": "N"
   }
 ]
