--- a/service/build.gradle
+++ b/service/build.gradle
@@ -117,7 +117,7 @@ task runApiTests(type: Test, description: 'Runs api tests.', group: 'Verificatio
 }
 
 project.ext {
-    pacticipant = 'payment_App'
+    pacticipant = 'fpl_ccdConfiguration'
     pacticipantVersion = getCheckedOutGitCommitHash()
 }
 
