rename supplements, supplement types and remove pba fields from caseField.json

--- a/ccd-definition/ComplexTypes/CareSupervision/2_OtherApplicationsBundle.json
+++ b/ccd-definition/ComplexTypes/CareSupervision/2_OtherApplicationsBundle.json
@@ -52,7 +52,7 @@
     "ListElementCode": "supplementsBundle",
     "ElementLabel": "Supplements",
     "FieldType": "Collection",
-    "FieldTypeParameter": "SupplementsBundle",
+    "FieldTypeParameter": "Supplement",
     "SecurityClassification": "Public",
     "Searchable": "N"
   },
