--- a/ccd-definition/FixedLists/CareSupervision/hearing-cancellation/HearingCancellationReasons-Other.json
+++ b/ccd-definition/FixedLists/CareSupervision/hearing-cancellation/HearingCancellationReasons-Other.json
@@ -51,21 +51,21 @@
   {
     "LiveFrom": "01/01/2017",
     "ID": "HearingCancellationReasons-Other",
-    "ListElementCode": "OT8",
+    "ListElementCode": "1NT",
     "ListElement": "Immigration and international difficulties",
     "DisplayOrder": 8
   },
   {
     "LiveFrom": "01/01/2017",
     "ID": "HearingCancellationReasons-Other",
-    "ListElementCode": "OT9",
+    "ListElementCode": "OT8",
     "ListElement": "Severe weather",
     "DisplayOrder": 9
   },
   {
     "LiveFrom": "01/01/2017",
     "ID": "HearingCancellationReasons-Other",
-    "ListElementCode": "OT10",
+    "ListElementCode": "OT9",
     "ListElement": "Industrial action",
     "DisplayOrder": 10
   }
