FPLA-2885: Code review comments

--- a/ccd-definition/FixedLists/CareSupervision/hearing-cancellation/HearingCancellationReasons-Other.json
+++ b/ccd-definition/FixedLists/CareSupervision/hearing-cancellation/HearingCancellationReasons-Other.json
@@ -51,7 +51,7 @@
   {
     "LiveFrom": "01/01/2017",
     "ID": "HearingCancellationReasons-Other",
-    "ListElementCode": "1NT",
+    "ListElementCode": "IN1",
     "ListElement": "Immigration and international difficulties",
     "DisplayOrder": 8
   },
@@ -68,5 +68,12 @@
     "ListElementCode": "OT9",
     "ListElement": "Industrial action",
     "DisplayOrder": 10
+  },
+  {
+    "LiveFrom": "01/01/2017",
+    "ID": "HearingCancellationReasons-Other",
+    "ListElementCode": "OT10",
+    "ListElement": "Covid 19",
+    "DisplayOrder": 11
   }
 ]
