--- a/charts/fpl-case-service/values.preview.template.yaml
+++ b/charts/fpl-case-service/values.preview.template.yaml
@@ -8,14 +8,28 @@ java:
   environment:
     FPL_ENV: preview
     CORE_CASE_DATA_API_URL: http://${SERVICE_NAME}-ccd-data-store-api
-    IDAM_CLIENT_REDIRECT_URI: https://fpl-case-service-*.service.core-compute-aat.internal/oauth2/callback
+    IDAM_CLIENT_REDIRECT_URI: https://fpl-case-service-*.service.core-compute-demo.internal/oauth2/callback
     SPRING_SECURITY_ENABLED: true
-    SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_JWKSETURI: https://idam-api.aat.platform.hmcts.net/o/jwks
+    SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_JWKSETURI: https://idam-api.demo.platform.hmcts.net/o/jwks
     CCD_UI_BASE_URL: https://case-management-web-${SERVICE_FQDN}
     MANAGE_CASE_UI_BASE_URL: https://xui-${SERVICE_FQDN}
     LD_USER_KEY: FPLA_PREVIEW
     SCHEDULER_ENABLED: false
     TESTING_SUPPORT_ENABLED: true
+    IDAM_API_URL: https://idam-api.demo.platform.hmcts.net
+    IDAM_S2S_AUTH_URL: http://rpe-service-auth-provider-demo.service.core-compute-demo.internal
+    RD_PROFESSIONAL_API_URL: http://rd-professional-api-demo.service.core-compute-demo.internal
+    SEND_LETTER_URL: http://rpe-send-letter-service-demo.service.core-compute-demo.internal
+    PAYMENT_API_URL: http://payment-api-demo.service.core-compute-demo.internal
+    FEES_REGISTER_API_URL: http://fees-register-api-demo.service.core-compute-demo.internal
+    DOCUMENT_MANAGEMENT_URL: http://dm-store-demo.service.core-compute-demo.internal
+    DOCMOSIS_TORNADO_URL: https://docmosis.demo.platform.hmcts.net
+    AUTH_IDAM_CLIENT_BASEURL: https://idam-api.demo.platform.hmcts.net
+    AUTH_PROVIDER_SERVICE_CLIENT_BASEURL: http://rpe-service-auth-provider-demo.service.core-compute-demo.internal
+    SCHEDULER_DB_USER: fpl_scheduler@fpl-case-service-demo
+    SCHEDULER_DB_HOST: fpl-case-service-demo.postgres.database.azure.com
+    SCHEDULER_DB_PORT: 5432
+    SPRING_CLOUD_BOOTSTRAP_ENABLED: true
   keyVaults:
     fpl:
       secrets:
@@ -106,10 +120,10 @@ ccd:
     ccdDataStoreUrl: http://${SERVICE_NAME}-ccd-data-store-api
     ccdDefinitionStoreUrl: http://${SERVICE_NAME}-ccd-definition-store
     ccdUserProfileUrl: http://${SERVICE_NAME}-ccd-user-profile-api
-    dmStoreUrl: http://dm-store-aat.service.core-compute-aat.internal
-    idamApiUrl: https://idam-api.aat.platform.hmcts.net
-    idamWebUrl: https://idam-web-public.aat.platform.hmcts.net
-    s2sUrl: http://rpe-service-auth-provider-aat.service.core-compute-aat.internal
+    dmStoreUrl: http://dm-store-demo.service.core-compute-demo.internal
+    idamApiUrl: https://idam-api.demo.platform.hmcts.net
+    idamWebUrl: https://idam-web-public.demo.platform.hmcts.net
+    s2sUrl: http://rpe-service-auth-provider-demo.service.core-compute-demo.internal
 
   ccd-api-gateway-web:
     nodejs:
@@ -118,7 +132,7 @@ ccd:
         ADDRESS_LOOKUP_TOKEN: ${ADDRESS_LOOKUP_TOKEN}
         IDAM_SERVICE_KEY: ${CCD_API_GATEWAY_S2S_SECRET}
         IDAM_OAUTH2_CLIENT_SECRET: ${CCD_API_GATEWAY_IDAM_CLIENT_SECRET}
-        PROXY_DOCUMENT_MANAGEMENT: http://dm-store-aat.service.core-compute-aat.internal
+        PROXY_DOCUMENT_MANAGEMENT: http://dm-store-demo.service.core-compute-demo.internal
       ingressHost: gateway-${SERVICE_FQDN}
       ingressIP: ${INGRESS_IP}
       keyVaults: []
@@ -130,7 +144,7 @@ ccd:
       environment:
         DATA_STORE_DB_HOST: ${SERVICE_NAME}-postgresql
         DATA_STORE_IDAM_KEY: ${CCD_DATA_STORE_S2S_SECRET}
-        IDAM_USER_URL: https://idam-web-public.aat.platform.hmcts.net
+        IDAM_USER_URL: https://idam-web-public.demo.platform.hmcts.net
         CCD_S2S_AUTHORISED_SERVICES_CASE_USER_ROLES: fpl_case_service
         ELASTIC_SEARCH_ENABLED: true
         ELASTIC_SEARCH_HOSTS: ${SERVICE_NAME}-es-master:9200
@@ -152,7 +166,7 @@ ccd:
       environment:
         DEFINITION_STORE_DB_HOST: ${SERVICE_NAME}-postgresql
         DEFINITION_STORE_IDAM_KEY: ${CCD_DEFINITION_STORE_S2S_SECRET}
-        IDAM_USER_URL: https://idam-web-public.aat.platform.hmcts.net
+        IDAM_USER_URL: https://idam-web-public.demo.platform.hmcts.net
         ELASTIC_SEARCH_ENABLED: true
         ELASTIC_SEARCH_HOST: ${SERVICE_NAME}-es-master
       keyVaults: []
